# Hypern

./: .gitignore  Cargo.toml  DOCS_BUILD.md  DOCUMENTATION_QUICKSTART.md  DOCUMENTATION_SUMMARY.md  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  run_test_server.py
.github/workflows/: codeql.yml  codspeed.yml  preview-deployments.yml  release-CI.yml  security-scan.yml
docs/: README.md  auth.md  best-practices.md  blocking-executor.md  changelog.md  cli.md  database.md  dependency-injection.md  error-handling.md  file-uploads.md  getting-started.md  graphql.md  grpc.md  http-client.md  index.md  metrics.md  middleware.md  performance-optimization-plan.md  realtime.md  redis.md  request-response.md  routing.md  scheduling.md  sse.md  tasks.md  user-guide.md  utils.md  validation.md  websocket.md  zero-downtime.md
docs/api/core/: hypern.md
docs/contributing/: guidelines.md
docs/getting-started/: concepts.md  installation.md  project-structure.md  quickstart.md
docs/guide/: application.md  routing.md
docs/stylesheets/: extra.css
hypern/: __init__.py  _hypern.pyi  application.py  auth.py  blocking.py  client.py  config.py  database.py  di.py  exceptions.py  graphql.py  grpc.py  hypern.pyi  middleware.py  openapi.py  processpool.py  realtime.py  redis.py  router.py  scheduler.py  tasks.py  utils.py  validation.py  websocket.py
hypern/caching/: backend.py  decorator.py  entry.py  redis_backend.py  strategies.py
hypern/caching/strategies/: aside.py  interface.py  read_through.py  stale_while_revalidate.py  write_through.py
hypern/cli/: __init__.py  main.py  run.py
hypern/cli/scaffolding/: __init__.py  _base.py  clean.py  cqrs.py  ddd.py  event_driven.py  hexagonal.py  layered.py  onion.py  saga.py  saga_event.py
hypern/logging/: handler.py  logger.py
hypern/manager/: __init__.py  config_manager.py  dependency_manager.py  middleware_manager.py  router_manager.py  websocket_manager.py
hypern/openapi/: schemas.py
hypern/routing/: dispatcher.py  endpoint.py  parser.py  queue.py  route.py
plan/: README.md  phase1-correctness-and-dx.md  phase2-performance-and-rust-core.md  phase3-new-capabilities.md  phase4-ecosystem-and-future.md
src/: application.rs  di.rs  error_handling.rs  errors.rs  execute.rs  executor.rs  header.rs  http.rs  instants.rs  lib.rs  lifecycle.rs  logger.rs  middleware.rs  radix.rs  request.rs  response.rs  response_builder.rs  router.rs  server.rs  socket.rs
src/background/: background_task.rs  background_tasks.rs
src/client/: mod.rs
src/core/: blocking.rs  blocking_executor.rs  context.rs  global.rs  interpreter.rs  interpreter_pool.rs  mod.rs  multiprocess.rs  reload.rs  runtime.rs  runtime_state.rs  server.rs  service.rs  socket.rs  tasks.rs  worker.rs
src/database/: any_pool.rs  config.rs  connection.rs  mod.rs  operation.rs  pool.rs  request_context.rs  row_converter.rs  transaction.rs
src/fast_path/: json_cache.rs  mod.rs  static_files.rs
src/grpc/: mod.rs
src/http/: body.rs  callback.rs  errors.rs  headers.rs  method.rs  mod.rs  multipart.rs  parser.rs  request.rs  response.rs  streaming.rs  websocket.rs
src/logging/: mod.rs
src/memory/: arena.rs  mod.rs  pool.rs
src/metrics/: collector.rs  mod.rs
src/middleware/: builtin.rs  chain.rs  mod.rs
src/middlewares/: base.rs
src/python/: bytecode.rs  gil.rs  mod.rs
src/realtime/: broadcast.rs  channel.rs  heartbeat.rs  mod.rs  presence.rs
src/redis/: mod.rs
src/router/: mod.rs  radix.rs  route.rs  router.rs
src/routing/: cache.rs  matcher.rs  mod.rs  radix.rs  route.rs  router.rs
src/runtime/: asyncio.rs  blocking.rs  callback.rs  callbacks.rs  conversion.rs  future.rs  mod.rs
src/scheduler/: scheduler.rs
src/telemetry/: mod.rs
src/types/: body.rs  function_info.rs  header.rs  mod.rs  query.rs  request.rs  response.rs
src/utils/: cpu.rs  crypto.rs  hash.rs  json.rs  mod.rs  pagination.rs  str_utils.rs  time_utils.rs
src/ws/: route.rs  router.rs  websocket.rs
tests/: conftest.py  server.py  test_auth.py  test_background_tasks.py  test_basic_api.py  test_blocking_executor.py  test_database.py  test_di_context.py  test_error_handling.py  test_middleware.py  test_middleware_rust.py  test_realtime.py  test_request_response.py  test_router_integration.py  test_routing.py  test_scheduler.py  test_server.py  test_sse.py  test_validation.py  test_websocket.py
