[package]
name = "hypern"
version = "0.3.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hypern"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "generate-import-lib"] }

tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.28"
socket2 = { version = "0.6.1", features = ["all"] }

# Axum as the main web framework (built on hyper + tower)
axum = { version = "0.8", features = ["http2", "macros", "matched-path"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "compression-br", "timeout", "request-id", "trace", "limit"] }

tower = { version = "0.5.3", features = ["full"] }
bytes = "1.11.0"
percent-encoding = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
form_urlencoded = "1.2.1"
mimalloc = { version = "0.1.48", optional = true }
libc = "0.2.180"
crossbeam-channel = "0.5.11"

# Performance: SIMD JSON parsing
simd-json = "0.17.0"

# Performance: Fast hashing
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# URL routing
matchit = "0.9.1"

# Performance: Memory optimization
smallvec = "1.15.1"
memmap2 = "0.9"
bumpalo = "3.14"

# Performance: Concurrency
dashmap = "6.1.0"
parking_lot = "0.12.5"

# Tracing (optional)
tracing = { version = "0.1.44"}
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error handling
thiserror = "2.0.18"

# Smart String optimization
smartstring = "1.0.1"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# PostgreSQL async connection pool
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[target.'cfg(not(any(target_env = "musl", target_os = "freebsd", target_os = "openbsd", target_os = "windows")))'.dependencies]
tikv-jemallocator = { version = "0.6.1", default-features = false, features = ["disable_initial_exec_tls"] }

[build-dependencies]
pyo3-build-config = "=0.27.2"

[features]
mimalloc = ["dep:mimalloc"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"

[package.metadata.maturin]
name = "hypern"
python-source = "hypern"
