[package]
name = "hypern"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hypern"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "generate-import-lib"] }

tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "sync", "time", "signal", "macros"] }
futures-core = "0.3.32"
socket2 = "0.6.2"

# Axum as the main web framework (built on hyper + tower)
axum = { version = "0.8", features = ["http2"] }
bytes = "1.11.1"
percent-encoding = "2.3.1"
serde = "1.0"
serde_json = "1.0.149"
form_urlencoded = "1.2.1"
mimalloc = { version = "0.1.48", optional = true }
libc = "0.2.182"
crossbeam-channel = "0.5.11"

# Performance: SIMD JSON parsing
simd-json = "0.17.0"

# Performance: Fast hashing
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# URL routing
matchit = "0.9.1"

# Performance: Memory optimization
smallvec = "1.15.1"
memmap2 = "0.9.10"
bumpalo = "3.20.2"

# Performance: Concurrency
dashmap = "6.1.0"
parking_lot = "0.12.5"

# Tracing (optional)
tracing = { version = "0.1.44"}
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Smart String optimization
smartstring = "1.0.1"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# PostgreSQL async connection pool
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }

# Utils: crypto, uuid, encoding
uuid = { version = "1.21.0", features = ["v4", "v7"] }
rand = "0.10.0"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

[target.'cfg(not(any(target_env = "musl", target_os = "freebsd", target_os = "openbsd", target_os = "windows")))'.dependencies]
tikv-jemallocator = { version = "0.6.1", default-features = false, features = ["disable_initial_exec_tls"] }

[build-dependencies]
pyo3-build-config = "=0.28.2"

[features]
mimalloc = ["dep:mimalloc"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"

# Enable target-cpu=native for maximum SIMD utilization
[profile.release.build-override]
opt-level = 3

[package.metadata.maturin]
name = "hypern"
python-source = "hypern"
