
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hypern"
version = "0.3.15"
description = "A Fast Async Python backend with a Rust runtime."
authors = [{ name = "Martin Dang", email = "vannghiem848@gmail.com" }]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies=[
    "orjson==3.10.11",
    "uvloop==0.21.0; sys_platform != 'win32' and platform_python_implementation == 'CPython' and platform_machine != 'armv7l'",
    "msgpack==1.1.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hypern.hypern"

[tool.poetry]
name = "hypern"
version = "0.3.15"
description = "A Fast Async Python backend with a Rust runtime."
authors = ["Martin Dang <vannghiem848@gmail.com>"]

[tool.poetry.group.test.dependencies]
pytest = "9.0.2"
requests = "2.32.2"
pytest-asyncio = "1.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.14.10"
black = "25.12.0"
isort = "7.0.0"
pre-commit = "4.5.1"
commitizen = "4.11.0"
pytest-codspeed = "^4.2.0"
bandit = "^1.7.10"

[tool.ruff]
line-length = 160
exclude = ["src/*", ".git", "docs"]

[tool.ruff.mccabe]
max-complexity = 10
