
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hypern"
version = "1.0.1"
description = "A Fast Async Python backend with a Rust runtime."
authors = [{ name = "Martin Dang", email = "vannghiem848@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Environment :: Web Environment",
    "Typing :: Typed",
]
dependencies=[
    "orjson>=3.10.11",
    "msgspec>=0.18.0",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "veloxloop (>=0.2.0,<0.3.0)",
]

[project.scripts]
hypern = "hypern.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hypern._hypern"

[tool.poetry]
name = "hypern"
version = "1.0.1"
description = "A Fast Async Python backend with a Rust runtime."
authors = ["Martin Dang <vannghiem848@gmail.com>"]

[tool.poetry.group.test.dependencies]
pytest = "9.0.2"
requests = "2.32.2"
pytest-asyncio = "1.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.1"
black = "26.1.0"
isort = "7.0.0"
pre-commit = "4.5.1"
commitizen = "4.11.0"
pytest-codspeed = "^4.2.0"
bandit = "^1.7.10"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.7.1"

[tool.ruff]
line-length = 160
exclude = ["src/*", ".git", "docs"]

[tool.ruff.mccabe]
max-complexity = 10
